--- a/evm-advanced/defi-holders/backend/package.json
+++ b/evm-advanced/defi-holders/backend/package.json
@@ -10,8 +10,9 @@
 		"deploy-local": "npx hardhat run ./scripts/MyContract_deploy.js --network localhost"
 	},
 	"dependencies": {
-		"dotenv": "^16.0.2",
-		"@openzeppelin/contracts": "^4.7.3"
+		"@openzeppelin/contracts": "^4.7.3",
+		"@openzeppelin/contracts-upgradeable": "^4.9.1",
+		"dotenv": "^16.0.2"
 	},
 	"devDependencies": {
 		"@nomicfoundation/hardhat-toolbox": "^1.0.2",
